128-bit Floating Point Support
+ Added Support for 128-bit Floating-Point Precision
+ Introduced the ability to specify the floating-point type for Neural Networks (e.g., f32, f64, f128).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,30 @@
 cmake_minimum_required(VERSION 3.26)
 
-project(XorAI)
-
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CUDA_HOST_COMPILER /usr/bin/g++-12)
+set(CMAKE_CUDA_COMPILER /usr/bin/nvcc)
+set(CMAKE_CUDA_ARCHITECTURES 75)
+
+enable_language(CUDA)
+project(XorAI LANGUAGES CXX CUDA)
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(JSONCPP jsoncpp)
 link_libraries(${JSONCPP_LIBRARIES})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}src/)
+set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 
-file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h)
-file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+include_directories(${PROJECT_DIR}/lib/)
+include_directories(${PROJECT_DIR}/src/)
 
-add_executable(XorAI ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp ${HEADERS} ${SOURCES})
-target_link_libraries(XorAI ${JSONCPP_LIBRARIES})
+file(GLOB_RECURSE HEADERS ${PROJECT_DIR}/lib/*.h)
+file(GLOB_RECURSE SOURCES ${PROJECT_DIR}/src/*.cpp)
+file(GLOB_RECURSE CUDA_HEADERS ${PROJECT_DIR}/lib/*.cuh)
+file(GLOB_RECURSE CUDA_SOURCES ${PROJECT_DIR}/src/*.cu)
+
+add_executable(XorAI ${PROJECT_DIR}/main.cpp ${HEADERS} ${CUDA_HEADERS} ${SOURCES} ${CUDA_SOURCES})
+#add_executable(XorAI ${PROJECT_DIR}/main.cpp ${HEADERS} ${SOURCES})
+
+# Remove -lquadmath if you do not plan on using the __float128 type and don't have the quadmath C binaries.
+target_link_libraries(XorAI ${JSONCPP_LIBRARIES} -lquadmath)
+set_target_properties(XorAI PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
